--- a/Resources/Prototypes/_CP14/Entities/Clothing/Cloak/Roles/bank.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Cloak/Roles/bank.yml
@@ -1,10 +1,9 @@
 - type: entity
   parent: 
   - CP14ClothingCloakBase
-  - ClothingSlotBase
-  id: CP14ClothingCloakCommandantJacket
+  id: CP14ClothingCloakCommandantJacket #TODO: Rename from Jacket to Cape
   name: commandant's cape
-  description: the colors white and gold tell you that you're looking at a higher power.
+  description: The colors white and gold tell you that you're looking at a higher power.
   components:
   - type: Sprite
     sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_cape.rsi
