--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
@@ -96,8 +96,7 @@
   - type: Sprite
     layers:
       - state: green
-      - state: adventurer #TODO
-        color: red
+      - state: guildmaster
 
 # Artisans
 
