--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/blacksmith.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/blacksmith.yml
@@ -31,3 +31,20 @@
   - CP14IronDoorMirrored
   id: CP14IronDoorMirroredBlacksmith2
   suffix: Blacksmith 2, Mirrored
+
+- type: entity
+  parent: CP14IronDoor
+  id: CP14IronDoorBlacksmith3
+  suffix: Blacksmith 3
+  components:
+  - type: CP14Lock
+    autoGenerateShape: Blacksmith3
+  - type: Lock
+    locked: true
+
+- type: entity
+  parent: 
+  - CP14IronDoorBlacksmith3
+  - CP14IronDoorMirrored
+  id: CP14IronDoorMirroredBlacksmith3
+  suffix: Blacksmith 3, Mirrored
