--- a/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/stamps.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/stamps.yml
@@ -70,3 +70,16 @@
     stampState: "guard_on_paper"
   - type: Sprite
     state: guard
+
+- type: entity
+  id: CP14StampGuildmaster
+  parent: CP14StampBase
+  name: guildmaster stamp
+  suffix: DO NOT MAP
+  components:
+  - type: Stamp
+    stampedName: cp14-stamp-guildmaster
+    stampedColor: "#115c41"
+    stampState: "guildmaster_on_paper"
+  - type: Sprite
+    state: guildmaster
