--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -80,6 +80,7 @@
       - id: CP14StampDenied
       - id: CP14StampApproved
       - id: CP14StampCommandant
+      - id: CP14PaperFolderBlue
 
 - type: entity
   parent: CP14SafeVault
@@ -168,3 +169,16 @@
       - id: CP14CrystalLampBlueEmpty
       - id: CP14StampGuardCommander
       - id: CP14BookImperialLawsHandBook
+
+- type: entity
+  parent: CP14WoodenCloset
+  id: CP14WoodenClosetGuildmasterFilled
+  suffix: Guildmaster, Filled
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14StampGuildmaster
+      - id: HandLabeler #TODO custom cp14 labeler
+      - id: CP14StampDenied
+      - id: CP14StampApproved
+      - id: CP14PaperFolderBlue
