Guildmaster YML implementation + Clothing pack (#832)
* banker clothing resprite

* dinazewwr

* commandant cape resprite

* guildmaster cloak

* Guildmaster loadout

* guildmaster job icon

* key locks work

* map update

* guildmaster keys

* guildmaster stamp

* update guildmaster house

* track demiplanes

* player death track

* localization

* guildmaster objective

* Update empire_orders.yml

* fix

* fix map

--- a/Resources/Prototypes/_CP14/Entities/Clothing/Cloak/Roles/bank.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Cloak/Roles/bank.yml
@@ -1,12 +1,11 @@
 - type: entity
   parent: 
   - CP14ClothingCloakBase
-  - ClothingSlotBase
-  id: CP14ClothingCloakCommandantJacket
-  name: commandant's jacket
-  description: the colors white and gold tell you that you're looking at a higher power.
+  id: CP14ClothingCloakCommandantJacket #TODO: Rename from Jacket to Cape
+  name: commandant's cape
+  description: The colors white and gold tell you that you're looking at a higher power.
   components:
   - type: Sprite
-    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_jacket.rsi
+    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_cape.rsi
   - type: Clothing
-    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_jacket.rsi
+    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_cape.rsi
