--- a/Resources/Prototypes/_CP14/Objectives/empire_orders.yml
+++ b/Resources/Prototypes/_CP14/Objectives/empire_orders.yml
@@ -18,7 +18,7 @@
     minCollectionSize: 5
     maxCollectionSize: 10
     objectiveText: cp14-objective-town-send-title
-    descriptionText: cp14-objective-town-send-desc
+    objectiveDescription: cp14-objective-town-send-desc
   - type: Objective
 
 - type: entity
@@ -88,3 +88,24 @@
   weights:
     CP14TownBankEarningObjectiveMedium: 0.6
     CP14TownBankEarningObjectiveBig: 0.3
+
+# No Demiplane death objective
+- type: entity
+  parent: CP14BaseTownObjective
+  id: CP14GuildmasterNoDemiplaneDeathObjective
+  components:
+  - type: CP14StatisticRangeCondition
+    statistic: DemiplaneDeaths
+    range:
+      min: 0
+      max: 3 #TODO Adaptive to player count
+    objectiveText: cp14-objective-no-demiplane-death-title
+    objectiveDescription: cp14-objective-no-demiplane-death-desc
+    objectiveSprite:
+      sprite: /Textures/_CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
+      state: tool
+
+- type: weightedRandom
+  id: CP14GuildmasterNoDemiplaneObjectiveGroup
+  weights:
+    CP14GuildmasterNoDemiplaneDeathObjective: 1
