--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/flint.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/flint.yml
@@ -2,7 +2,7 @@
   parent: BaseItem
   id: CP14Lighter
   name: flint and steel
-  description: "Setting things on fire. Absolutely, 100% not from minecraft." # TODO: remove minecraft sprite and desc
+  description: Setting things on fire
   categories: [ ForkFiltered ]
   components:
   - type: Item
